--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <title>AI Chatbot</title>
 </head>
 <body>
-    <div class="chat-container">
-        <div id="chat-box"></div>
-        <input type="text" id="user-input" placeholder="Type your message...">
-        <button onclick="sendMessage()">Send</button>
+
+<div class="container-fluid">
+    <div class="row">
+
+        <!-- Sidebar with logo and options -->
+        <div class="col-lg-2 bg-light">
+            <div class="mt-4 mb-4">
+                <img src="pathtologo.png" alt="Logo" class="img-fluid mx-auto d-block">
+            </div>
+            <button class="btn btn-primary btn-block mb-2">Profile</button>
+            <button class="btn btn-primary btn-block">History</button>
+        </div>
+
+        <!-- Chatbox -->
+        <div class="col-lg-10">
+            <div class="chat-container">
+                <div id="chat-box"></div>
+                <input type="text" id="user-input" placeholder="Type your message..." class="form-control mb-2">
+                <button onclick="sendMessage()" class="btn btn-primary btn-block">Send</button>
+            </div>
+        </div>
+
     </div>
-    <script src="script.js"></script>
+</div>
+
+<script src="script.js"></script>
 </body>
 </html>
