--- a/public/index.html
+++ b/public/index.html
@@ -21,16 +21,17 @@
             <button class="btn btn-primary btn-block">History</button>
         </div>
 
-        <!-- Chatbox -->
-        <div class="col-lg-10">
-            <div class="chat-container">
-                <div id="chat-box"></div>
-                <input type="text" id="user-input" placeholder="Type your message..." class="form-control mb-2">
-                <button onclick="sendMessage()" class="btn btn-primary btn-block">Send</button>
-            </div>
+<!-- Chatbox -->
+<div class="col-lg-10">
+    <div class="chat-container">
+        <div id="chat-box" class="chat-box"></div>
+        <div class="user-input-container">
+            <input type="text" id="user-input" placeholder="Type your message..." class="form-control mb-2">
+            <button onclick="sendMessage()" class="btn btn-primary btn-block">Send</button>
         </div>
-
     </div>
+</div>
+
 </div>
 
 <script src="script.js"></script>
