--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
                 <div id="chat-box" class="chat-box"></div>
                 <div class="user-input-container">
                     <input type="text" id="user-input" placeholder="Type your message...">
-                    <button id="send-button" class="button"></button>
+                    <button id="send-button" class="button" type="button"></button>
                 </div>
             </div>
         </div>
