--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
             <div class="chat-container">
                 <div id="chat-box" class="chat-box"></div>
                 <div class="user-input-container">
-                    <input type="text" id="user-input" placeholder="Type your message...">
+                    <textarea id="user-input" placeholder="Type your message..."></textarea>
                     <button id="send-button" class="button" type="button"></button>
                 </div>
             </div>
