--- a/public/history.html
+++ b/public/history.html
@@ -1,10 +1,11 @@
+<!--/public/history.html-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="history.css">
     <title>Conversation History</title>
 </head>
 <body>
@@ -40,7 +41,7 @@
                 <div class="history-content">
                     <h2>Conversation History</h2>
                     <div id="historyList" class="list-group">
-                        <!-- Conversations will be appended here by history.js -->
+                        <!-- Conversations will be appended here -->
                     </div>
                 </div>
             </div>
