--- a/public/history.html
+++ b/public/history.html
@@ -38,8 +38,10 @@
 
             <!-- Main content area for History Page -->
             <div class="col-sm p-3 min-vh-100">
-                <div class="history-content">
+                <div class="history-title">
                     <h2>Conversation History</h2>
+                </div>
+                <div class="history-content">
                     <div id="historyList" class="list-group">
                         <!-- Conversations will be appended here -->
                     </div>
