--- a/public/login.html
+++ b/public/login.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <!-- Add your CSS stylesheets here -->
 </head>
 <body>
     <h1>Login</h1>
     <form action="/login" method="POST">
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
-        <br>
+        <input type="text" id="username" name="username" placeholder="Enter your username" required>
+        
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-        <br>
-        <button type="submit">Login</button>
+        <input type="password" id="password" name="password" placeholder="Enter your password" required>
+        
+        <button type="submit">Log In</button>
     </form>
-    <p>Don't have an account? <a href="/signup">Signup</a></p>
+    <!-- Add any additional content or links as needed -->
 </body>
 </html>
