--- a/public/profile.html
+++ b/public/profile.html
@@ -31,6 +31,11 @@
                             <img src="./img/history.svg" alt="History" class="img-fluid sidebar-icon">
                         </a>
                     </li>
+                    <li>
+                        <a href="/logout" class="nav-link py-3 px-2" title="Logout">
+                            <img src="./img/logout.svg" alt="Logout" class="img-fluid sidebar-icon">
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
