--- a/public/signup.html
+++ b/public/signup.html
@@ -4,30 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="signup.css"> </head>
+    <link rel="stylesheet" href="signup.css">
+</head>
 <body>
     <div class="container">
         <header>
-            <img src="./img/Luna.svg" alt="Logo"> </header>
+            <img src="./img/Luna.svg" alt="Logo">
+        </header>
         <main>
             <h1>Sign Up</h1>
             <form action="/signup" method="POST">
                 <div class="form-group">
                     <label for="username">Username:</label>
-                    <input type="text" id="username" name="username" placeholder="Choose a username" required>
+                    <input type="text" id="username" name="username" placeholder="Username" required>
                 </div>
                 <div class="form-group">
                     <label for="password">Password:</label>
-                    <input type="password" id="password" name="password" placeholder="Enter a password" required>
+                    <input type="password" id="password" name="password" placeholder="Password" required>
                 </div>
                 <div class="form-group">
                     <label for="confirmPassword">Confirm Password:</label>
-                    <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm your password" required>
+                    <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm Password" required>
                 </div>
                 <button type="submit">Sign Up</button>
             </form>
+            <div id="error-message" class="error-message"></div> <!-- Add this error message div -->
             <p>Already have an account? <a href="login.html">Login</a></p>
         </main>
     </div>
+    <script src="signup.js"></script>
 </body>
 </html>
