--- a/public/history.html
+++ b/public/history.html
@@ -1,4 +1,3 @@
-<!--/public/history.html-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,8 +12,8 @@
     <div class="container-fluid">
         <div class="row">
 
-            <!-- Sidebar with logo and options -->
-            <div class="col-sm-auto bg-light sticky-top">
+            <!-- Updated Sidebar with new class for width -->
+            <div class="sidebar-custom bg-light sticky-top">
                 <div class="d-flex flex-sm-column flex-row flex-nowrap bg-light align-items-center sticky-top">
                     <!-- Logo -->
                     <a href="/index.html" class="d-block p-3 link-dark text-decoration-none" title="Logo">
