--- a/public/login.html
+++ b/public/login.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="login.css">
 </head>
@@ -9,20 +11,22 @@
         <header>
             <img src="./img/Luna.svg" alt="Logo">
         </header>
-        <div id="error-message" class="error-message"></div> <!-- Place it here at the top -->
         <main>
+            <h1>Login</h1>
             <form action="/login" method="POST">
                 <div class="form-group">
                     <label for="username">Username:</label>
-                    <input type="text" id="username" name="username">
+                    <input type="text" id="username" name="username" placeholder="Username" required>
                 </div>
                 <div class="form-group">
                     <label for="password">Password:</label>
-                    <input type="password" id="password" name="password">
+                    <input type="password" id="password" name="password" placeholder="Password" required>
                 </div>
                 <button type="submit">Login</button>
             </form>
-            <p>Don't have an account? <a href="signup.html">Sign up</a></p> </main>
+            <div id="error-message" class="error-message"></div> <!-- Keep the error message div here -->
+            <p>Don't have an account? <a href="signup.html">Sign up</a></p>
+        </main>
     </div>
     <script src="login.js"></script>
 </body>
