--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,11 @@
     <div class="container-fluid">
         <div class="row">
 
-            <!-- New Sidebar with logo and options -->
-            <div class="col-sm-auto bg-light sticky-top">
+            <!-- Updated Sidebar with new class for width -->
+            <div class="sidebar-custom bg-light sticky-top">
                 <div class="d-flex flex-sm-column flex-row flex-nowrap bg-light align-items-center sticky-top">
                     <!-- Logo -->
-                    <a href="/" class="d-block p-3 link-dark text-decoration-none" title="Logo">
+                    <a href="/index.html" class="d-block p-3 link-dark text-decoration-none" title="Logo">
                         <img src="./img/Luna.svg" alt="Logo" class="img-fluid">
                     </a>
                     <!-- Nav items -->
@@ -34,7 +34,7 @@
                         </li>
                     </ul>
                 </div>
-            </div>            
+            </div>         
 
             <!-- Chatbox -->
             <div class="col-sm p-3 min-vh-100">
