--- a/public/login.html
+++ b/public/login.html
@@ -24,8 +24,9 @@
                 </div>
                 <button type="submit">Login</button>
             </form>
-            <div id="error-message" class="error-message"></div> <!-- Keep the error message div here -->
+            <div id="error-message" class="error-message"></div>
             <p>Don't have an account? <a href="signup.html">Sign up</a></p>
+            <p>Don't want an account be a <a href="index.html">Guest</a></p>
         </main>
     </div>
     <script src="login.js"></script>
