--- a/public/signup.html
+++ b/public/signup.html
@@ -28,7 +28,7 @@
                 </div>
                 <button type="submit">Sign Up</button>
             </form>
-            <div id="error-message" class="error-message"></div> <!-- Add this error message div -->
+            <div id="error-message" class="error-message"></div>
             <p>Already have an account? <a href="login.html">Login</a></p>
         </main>
     </div>
